# imu_vn_100

./: .travis.yml  CMakeLists.txt  README.md  e  package.xml
config/: default-imu_vn_100-params.yaml
ext/vnproglib-1.1.0.115/: CMakeLists.txt  download.md  package.xml
ext/vnproglib-1.1.0.115/include/vn/: event.h  exceptions.h  int.h  utilities.h
ext/vnproglib-1.1.0.115/include/vn/data/: error_detection.h
ext/vnproglib-1.1.0.115/include/vn/math/: Coordinate2.h  attitude.h  consts.h  conversions.h  kinematics.h  math.h  matrix.h  position.h  vector.h  ypr.h
ext/vnproglib-1.1.0.115/include/vn/protocol/uart/: packet.h  packetfinder.h  types.h  util.h
ext/vnproglib-1.1.0.115/include/vn/python/: util.h
ext/vnproglib-1.1.0.115/include/vn/sensors/: compositedata.h  ezasyncdata.h  mock.h  registers.h  searcher.h  sensors.h
ext/vnproglib-1.1.0.115/include/vn/util/: boostpython.h  compiler.h  dllvalidator.h  export.h  memoryport.h  nocopy.h
ext/vnproglib-1.1.0.115/include/vn/xplat/: criticalsection.h  event.h  port.h  serialport.h  signal.h  thread.h  time.h
ext/vnproglib-1.1.0.115/src/vn/: benchmark.cpp  event.cpp  main.cpp  python.cpp  utilities.cpp
ext/vnproglib-1.1.0.115/src/vn/data/: error_detection.cpp
ext/vnproglib-1.1.0.115/src/vn/math/: attitude.cpp  conversions.cpp  position.cpp  python.cpp
ext/vnproglib-1.1.0.115/src/vn/protocol/uart/: packet.cpp  packetfinder.cpp  python.cpp  types.cpp  util.cpp
ext/vnproglib-1.1.0.115/src/vn/sensors/: compositedata.cpp  ezasyncdata.cpp  python.cpp  searcher.cpp  sensors.cpp
ext/vnproglib-1.1.0.115/src/vn/util/: dllvalidator.cpp  memoryport.cpp
ext/vnproglib-1.1.0.115/src/vn/xplat/: criticalsection.cpp  event.cpp  port.cpp  python.cpp  serialport.cpp  thread.cpp  time.cpp
include/imu_vn_100/: imu_ros_base.h  imu_vn_100.h  imu_vn_100.hpp
include/imu_vn_100/vncpplib/examples/vn100_cross_platform_com_port_optimization_and_timing/: Vn100CrossPlatformComPortOptimizationAndTiming.vcxproj  Vn100CrossPlatformComPortOptimizationAndTiming.vcxproj.filters  makefile  vn100_cross_platform_optimization_and_timing.c
include/imu_vn_100/vncpplib/examples/vn100_linux_async/: makefile  vn100_linux_async.c
include/imu_vn_100/vncpplib/examples/vn100_linux_async_easy/: makefile  vn100_linux_async_easy.c
include/imu_vn_100/vncpplib/examples/vn100_linux_basic/: makefile  vn100_linux_basic.c
include/imu_vn_100/vncpplib/examples/vn100_linux_binary_async/: makefile  vn100_linux_binary_async.c
include/imu_vn_100/vncpplib/examples/vn100_linux_error_handling/: makefile  vn100_linux_error_handling.c
include/imu_vn_100/vncpplib/examples/vn100_windows_async/: Vn100WindowsAsync.vcproj  Vn100WindowsAsync.vcxproj  Vn100WindowsAsync.vcxproj.filters  vn100_windows_async.c
include/imu_vn_100/vncpplib/examples/vn100_windows_async_easy/: Vn100WindowsAsyncEasy.vcproj  Vn100WindowsAsyncEasy.vcxproj  Vn100WindowsAsyncEasy.vcxproj.filters  vn100_windows_async_easy.c
include/imu_vn_100/vncpplib/examples/vn100_windows_basic/: Vn100WindowsBasic.vcproj  Vn100WindowsBasic.vcxproj  Vn100WindowsBasic.vcxproj.filters  vn100_windows_basic.c
include/imu_vn_100/vncpplib/examples/vn100_windows_binary_async/: Vn100WindowsBinaryAsync.vcproj  Vn100WindowsBinaryAsync.vcxproj  Vn100WindowsBinaryAsync.vcxproj.filters  vn100_windows_binary_async.c
include/imu_vn_100/vncpplib/examples/vn100_windows_error_handling/: Vn100WindowsErrorHandling.vcproj  Vn100WindowsErrorHandling.vcxproj  Vn100WindowsErrorHandling.vcxproj.filters  vn100_windows_error_handling.c
include/imu_vn_100/vncpplib/examples/vn200_cross_platform_com_port_optimization_and_timing/: Vn200CrossPlatformComPortOptimizationAndTiming.vcxproj  Vn200CrossPlatformComPortOptimizationAndTiming.vcxproj.filters  makefile  vn200_cross_platform_optimization_and_timing.c
include/imu_vn_100/vncpplib/examples/vn200_linux_async/: makefile  vn200_linux_async.c
include/imu_vn_100/vncpplib/examples/vn200_linux_async_easy/: makefile  vn200_linux_async_easy.c
include/imu_vn_100/vncpplib/examples/vn200_linux_basic/: makefile  vn200_linux_basic.c
include/imu_vn_100/vncpplib/examples/vn200_linux_binary_async/: makefile  vn200_linux_binary_async.c
include/imu_vn_100/vncpplib/examples/vn200_linux_error_handling/: makefile  vn200_linux_error_handling.c
include/imu_vn_100/vncpplib/examples/vn200_windows_async/: Vn200WindowsAsync.vcproj  Vn200WindowsAsync.vcxproj  Vn200WindowsAsync.vcxproj.filters  vn200_windows_async.c
include/imu_vn_100/vncpplib/html_help/: annotated.html  classes.html  deprecated.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6e0222ad974cc9122884a070b669f80b.html  dir_70d5e250c66d001b18da37689179cade.html  dir_9bdb4a1e74a1394a8e0b1254e08574ee.html  dir_d44c64559bbebec7f509842c48db8b23.html  examples.html  files.html  functions.html  functions_vars.html  globals.html  globals_0x63.html  globals_0x64.html  globals_0x67.html  globals_0x6b.html  globals_0x70.html  globals_0x72.html  globals_0x73.html  globals_0x74.html  globals_0x75.html  globals_0x76.html  globals_0x77.html  globals_defs.html  globals_func.html  globals_func_0x64.html  globals_func_0x67.html  globals_func_0x6b.html  globals_func_0x70.html  globals_func_0x72.html  globals_func_0x73.html  globals_func_0x74.html  globals_func_0x75.html  globals_func_0x76.html  globals_func_0x77.html  globals_type.html  group___a_s_y_n_c___o_u_t_p_u_t_s.html  group___b_g1___s_e_l_e_c_t_i_o_n_s.html  group___b_g2___s_e_l_e_c_t_i_o_n_s.html  (+62 more)
include/imu_vn_100/vncpplib/html_help/search/: all_61.js  all_62.js  all_63.js  (+31 more)
include/imu_vn_100/vncpplib/include/: vncp_services.h  vndevice.h
include/imu_vn_100/vncpplib/src/: vndevice.c
launch/: .vn_100_cont.launch.swp  imu.launch  imu_vn_100-launch.py  vn_100_cont.launch  vn_100_cont_separate_from_camera.launch
src/: imu_ros_base.cpp  imu_vn_100.cpp  imu_vn_100.h  imu_vn_100_cont.cpp  imu_vn_100_flash_baud_rate.cpp  imu_vn_100_node.cpp  imu_vn_100_test.cpp
vncpplib/include/: vn100.h  vncp_services.h  vndevice.h
vncpplib/src/: vn100.c  vndevice.c
vncpplib/src/arch/linux/: vncp_services.c
(+17 files in other folders)
