<?xml version="1.0"?>
<package format="2">
  <name>imu_vn_100</name>
  <version>0.0.0</version>
  <description>The imu_vn_100 package</description>

  <maintainer email="sunke.polyu@gmail.com">Ke Sun</maintainer>
  <license>Apache 2.0</license>
  <!-- <url type="website">http://wiki.ros.org/imu_vn_100</url> -->
  <author email="sunke.polyu@gmail.com">Ke Sun</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
